# lsh-forest-for-multi-vector-retrieval

./: .gitignore  README.md  colbertv2_for_wiki_db.ipynb  explore_wiki_db.ipynb  explore_wikipedia_datasets.ipynb  lsh_forest.ipynb  lsh_forest_multi_doc.ipynb  plaid.ipynb  pyproject.toml  requirements.txt
notebooks/: chamfer_approx_planted_match.ipynb  chamfer_approx_real_data.ipynb  chamfer_approximation.ipynb  colbertv2_for_wiki_db.ipynb  experiments.ipynb  lsh_forest.ipynb  lsh_forest_multi_doc.ipynb  plaid.ipynb
src/shared/: forest_insights.py  forest_vote.py  lsh_family.py  lsh_forest.py  plotting.py  recursive_lsh_forest.py  retrieval.py  test_forest_vote.py  test_query.py  utils.py
