[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsh_forest"
version = "0.1.0"
authors = [
        { name = "Alex Racapé" },
        { name = "Luigi Liu" },
        { name = "Yuval Shemla" },
        { name = "Keemin Lee" },
]
dependencies = []
